--- a/app/src/main/res/layout/adapterviewlayou.xml
+++ b/app/src/main/res/layout/adapterviewlayou.xml
@@ -5,12 +5,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:weightSum="100"
+    android:paddingBottom="10dp"
     >
 <com.google.android.material.card.MaterialCardView
     android:layout_weight="95"
     android:layout_gravity="center"
     android:layout_margin="14dp"
-    android:layout_width="wrap_content"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@android:color/transparent"
     app:cardElevation="5dp"
@@ -21,6 +22,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
     <ImageView
+            android:contentDescription="Image of Sponsor"
             tools:src="@tools:sample/backgrounds/scenic"
             android:id="@+id/product_image"
             android:layout_width="match_parent"
@@ -40,7 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="whut"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:textColor="@color/trademarkRed"
                 android:textAppearance="?attr/textAppearanceHeadline6" />
 
@@ -49,7 +51,7 @@
                 android:id="@+id/product_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textColor="@android:color/black"
                 android:textAppearance="?attr/textAppearanceHeadline6" />
 
