--- a/app/src/main/res/layout/fragment_root_frame_layout.xml
+++ b/app/src/main/res/layout/fragment_root_frame_layout.xml
@@ -2,8 +2,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#000"
+    android:background="@android:color/background_light"
     android:layout_height="match_parent"
-    android:id="@+id/root_frame" >
-
+    android:id="@+id/root_frame"
+    >
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" android:text="you in root view"/>
 </FrameLayout>
