--- a/app/src/main/res/layout/fragment_tab_screen.xml
+++ b/app/src/main/res/layout/fragment_tab_screen.xml
@@ -3,16 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/something">
         <com.google.android.material.tabs.TabLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/theTabLayout"
-            app:tabTextColor="@color/trademarkRed">
+            app:tabTextColor="@color/trademarkRed"
+            android:background="@android:color/background_light">
         </com.google.android.material.tabs.TabLayout>
         <androidx.viewpager.widget.ViewPager
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:id="@+id/TabViewPager"
+            android:background="@android:color/background_light"
             />
 </LinearLayout>
