--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -12,5 +12,5 @@
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:context=".ScheduleFragment"
+        tools:context=".schedule.ScheduleFragment"
         tools:listitem="@layout/item_schedule"/>
