--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name ="trademarkRed" >#6E1E1f</color>
+    <color name = "trademarkRedFaded">#996E1E1F </color>
     <color name = "trademarkGold">#CEA446</color>
+
+
 </resources>
