--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,15 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent"
+<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="bottom">
-    android:layout_width="match_parent">
+
+
     <com.google.android.gms.maps.MapView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/mapview"></com.google.android.gms.maps.MapView>
-    <TextView
+        android:id="@+id/mapview"/>
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/jjj"/>
+        android:id="@+id/slidingPanel"
+        android:weightSum="100"
+        android:gravity="center_horizontal">
+        <ToggleButton
+            android:layout_width="wrap_content"
+            android:showText="true"
+            android:layout_height="0dp"
+            android:layout_weight="20"
+            app:switchMinWidth="159dp"
+            android:textSize="30sp"
+            app:switchTextAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textOff="Outdoor"
+            android:textOn="Indoor"
+            android:scaleX="2"
+            android:scaleY="2"
+            android:id="@+id/switchButton"/>
+
+    </LinearLayout>
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
 
