--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -6,24 +6,40 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         tools:context=".SignIn">
 
-        <LinearLayout
-            android:id="@+id/rectangle"
-            android:layout_width="fill_parent"
-            android:layout_height="100dp"
-            android:gravity="center">
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ICBC 2019 ICBC 2019 ICBC 2019"
+            android:textColor="@color/trademarkRedFaded2"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:singleLine="true"
+    />
 
-            <TextView
-                    android:id="@+id/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="I.C.B.C."
-                    android:textColor="#FFFFFF"
-                    android:textSize="40dp"
-            />
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="CBC 2019 ICBC 20"
+            android:textColor="@color/trademarkRedFaded2"
+            android:textSize="43dp"
+            android:textStyle="bold"
+            android:singleLine="true"
+    />
 
-        </LinearLayout>
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ICBC 2019"
+            android:textColor="@color/trademarkRedFaded2"
+            android:textSize="68dp"
+            android:textStyle="bold"
+            android:singleLine="true"
+    />
 
     <TextView
             android:layout_width="wrap_content"
@@ -67,37 +83,6 @@
     />
 
     <TextView
-            android:id="@+id/emailText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Email"
-            android:layout_marginLeft="30dp"
-            android:textColor="@color/trademarkRed"
-            android:visibility="invisible"
-    />
-    <EditText
-            android:id="@+id/emailEdit"
-            android:layout_width="325dp"
-            android:layout_height="50dp"
-            android:textSize="20dp"
-            android:paddingLeft="15dp"
-            android:hint="myemail@email.com"
-            android:layout_gravity="center"
-            android:maxLength="20"
-            android:outlineProvider="none"
-            android:background="@drawable/round_edit_text"/>
-    <TextView
-            android:id="@+id/emailText2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Please enter your Email here"
-            android:layout_marginLeft="30dp"
-            android:textColor="@color/trademarkRed"
-            android:textSize="10dp"
-            android:visibility="invisible"
-    />
-
-    <TextView
             android:id="@+id/nameText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -122,6 +107,37 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Please enter your name here"
+            android:layout_marginLeft="30dp"
+            android:textColor="@color/trademarkRed"
+            android:textSize="10dp"
+            android:visibility="invisible"
+    />
+
+    <TextView
+            android:id="@+id/emailText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email"
+            android:layout_marginLeft="30dp"
+            android:textColor="@color/trademarkRed"
+            android:visibility="invisible"
+    />
+    <EditText
+            android:id="@+id/emailEdit"
+            android:layout_width="325dp"
+            android:layout_height="50dp"
+            android:textSize="20dp"
+            android:paddingLeft="15dp"
+            android:hint="myemail@email.com"
+            android:layout_gravity="center"
+            android:maxLength="20"
+            android:outlineProvider="none"
+            android:background="@drawable/round_edit_text"/>
+    <TextView
+            android:id="@+id/emailText2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Please enter your Email here"
             android:layout_marginLeft="30dp"
             android:textColor="@color/trademarkRed"
             android:textSize="10dp"
