A lot of things

--- a/app/src/main/res/layout/fragment_event_info.xml
+++ b/app/src/main/res/layout/fragment_event_info.xml
@@ -1,24 +1,31 @@
-<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".favourites.SponsorInfoFragment">
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
     <ImageView
         android:layout_width="match_parent"
         android:scaleType="centerCrop"
-        android:layout_height="200dp" tools:src="@tools:sample/backgrounds/scenic"
+        android:layout_height="200dp"
         android:id="@+id/imageView"/>
     <TextView android:layout_width="match_parent" android:layout_height="32dp"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
         android:text="CompanyName"
-        android:id="@+id/companyName"/>
+        android:id="@+id/eventName"/>
     <TextView android:layout_width="match_parent" android:layout_height="19dp"
         android:id="@+id/introduction"
         android:text="Brief Intro"
         />
+    <TextView android:layout_width="match_parent" android:layout_height="19dp"
+        android:id="@+id/location"/>
+    <TextView android:layout_width="match_parent" android:layout_height="19dp"
+    android:id="@+id/time"/>
+
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
         android:orientation="horizontal" android:gravity="center">
         <Button android:layout_width="158dp" android:layout_height="48dp"
@@ -31,19 +38,21 @@
         android:text="About"
         android:textSize="18sp"/>
     <TextView android:layout_width="match_parent" android:layout_height="101dp"
+        android:textSize="16sp"
         android:id="@+id/aboutParagraph"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:text="Pulvinar iaculis venenatis nec senectus auctor pretium eget phasellus ullamcorper suscipit, ligula sed turpis quis curae mollis dolor commodo turpis dui, fusce consectetur vitae venenatis volutpat porta semper posuere bibendum."/>
     <TextView android:layout_width="match_parent" android:layout_height="24dp"
-        android:text="Events"
-        android:textSize="16dp"
+        android:text="Sponsors"
+        android:textSize="16sp"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
 
         />
-    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent">
+    <LinearLayout android:layout_width="match_parent" android:layout_height="500dp">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/eventInfoRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 </LinearLayout>
 </LinearLayout>
+</ScrollView>
