--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -74,6 +74,7 @@ undergraduate case competition.  Student Run, we proudly bring  the world to Can
         android:textColor="@color/trademarkRed"
         android:text="Executive Team" />
     <androidx.recyclerview.widget.RecyclerView
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:layout_marginHorizontal="10dp"
