--- a/app/src/main/res/layout/fragment_sponsor_info.xml
+++ b/app/src/main/res/layout/fragment_sponsor_info.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".favourites.SponsorInfoFragment">
@@ -40,8 +43,11 @@
     <TextView android:layout_width="match_parent" android:layout_height="24dp"
     android:text="Events"
         />
-    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent">
-        <androidx.viewpager.widget.ViewPager android:layout_width="match_parent"
-                                             android:layout_height="match_parent"></androidx.viewpager.widget.ViewPager>
+    <LinearLayout android:layout_width="match_parent" android:layout_height="500dp">
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/sponsorInfoRecyclerView"/>
     </LinearLayout>
 </LinearLayout>
+</ScrollView>
