--- a/app/src/main/res/layout/item_schedule.xml
+++ b/app/src/main/res/layout/item_schedule.xml
@@ -4,8 +4,8 @@
               android:layout_height="wrap_content"
               android:orientation="horizontal"
                 android:background="@android:color/white">
-    <LinearLayout android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
+    <LinearLayout android:layout_width="100dp"
+                  android:layout_height="100dp"
                   android:orientation="vertical"
                   android:layout_margin="10dp">
         <TextView
