--- a/app/src/main/res/layout/profile_view_holder.xml
+++ b/app/src/main/res/layout/profile_view_holder.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:gravity="center_vertical">
+    android:orientation="vertical" android:layout_width="110dp"
+    android:layout_height="match_parent"
+    android:gravity="center_vertical"
+    android:layout_margin="5dp">
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:id="@+id/circleImage"
         android:src="@drawable/ic_icon_add_filled"
         />
@@ -15,5 +17,6 @@
     android:textSize="16dp"
     android:layout_marginHorizontal="10dp"
     android:layout_width="wrap_content"
-    android:layout_height="21dp" />
+    android:layout_height="21dp"
+    android:layout_gravity="center"/>
 </LinearLayout>
