--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name = "trademarkRedFaded">#996E1E1F </color>
     <color name = "trademarkRedFaded2">#256E1E1F </color>
     <color name = "trademarkGold">#CEA446</color>
-
+<color name="grey">#D3D3D3</color>
 
 </resources>
