--- a/app/src/main/res/layout/fragment_sponsor_info.xml
+++ b/app/src/main/res/layout/fragment_sponsor_info.xml
@@ -12,6 +12,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <ImageView
+        android:padding="1dp"
             android:layout_width="match_parent"
             android:scaleType="centerCrop"
             android:layout_height="200dp" tools:src="@tools:sample/backgrounds/scenic"
@@ -19,35 +20,32 @@
     <TextView android:layout_width="match_parent" android:layout_height="32dp"
     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
     android:text="CompanyName"
+        android:paddingHorizontal="10dp"
     android:id="@+id/companyName"/>
     <TextView android:layout_width="match_parent" android:layout_height="19dp"
     android:id="@+id/introduction"
     android:text="Brief Intro"
+        android:paddingHorizontal="10dp"
     />
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
     android:orientation="horizontal" android:gravity="center">
-        <Button android:layout_width="158dp" android:layout_height="48dp"
-        android:layout_margin="16dp" android:id="@+id/linkedInButton"
-            android:drawableLeft="@drawable/linked_in_button_left_blue"
-            android:textColor="@color/trademarkRed"/>
-        <Button android:layout_width="158dp" android:layout_height="48dp"
-                android:layout_margin="16dp" android:id="@+id/companyButton"
+
+
+
+        <Button
+            android:layout_width="match_parent" android:layout_height="48dp"
+            android:layout_margin="16dp" android:id="@+id/companyButton"
             android:drawableLeft="@drawable/ic_icon_add_filled"
             android:textColor="@color/trademarkRed"
-            app:autoSizeTextType="uniform" />
-           </LinearLayout>
-    <TextView android:layout_width="match_parent" android:layout_height="24dp"
-    android:text="About"/>
-    <TextView android:layout_width="match_parent" android:layout_height="101dp"
-    android:id="@+id/aboutParagraph"/>
-    <TextView android:layout_width="match_parent" android:layout_height="24dp"
-    android:text="Events"
-        />
-    <LinearLayout android:layout_width="match_parent" android:layout_height="500dp">
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/sponsorInfoRecyclerView"/>
+            android:background="@color/trademarkRedFaded2"
+            />
     </LinearLayout>
+    <TextView android:layout_width="match_parent" android:layout_height="24dp"
+    android:text="About"
+        android:paddingHorizontal="10dp"/>
+    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
+    android:id="@+id/aboutParagraph"
+        android:paddingHorizontal="10dp"/>
+
 </LinearLayout>
 </ScrollView>
