--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,12 @@
 <resources>
     <color name="white">#FFFFFF</color>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#5E0F0F
+    </color>
     <color name="colorAccent">#D81B60</color>
     <color name ="trademarkRed" >#6E1E1f</color>
     <color name = "trademarkRedFaded">#996E1E1F </color>
-    <color name = "trademarkRedFaded2">#256E1E1F </color>
+    <color name = "trademarkRedFaded2">#506E1E1F </color>
     <color name = "trademarkGold">#CEA446</color>
 <color name="grey">#D3D3D3</color>
 
