--- a/app/src/main/res/layout/adapterviewlayou.xml
+++ b/app/src/main/res/layout/adapterviewlayou.xml
@@ -22,13 +22,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
     <ImageView
+
             android:contentDescription="Image of Sponsor"
             tools:src="@tools:sample/backgrounds/scenic"
             android:id="@+id/product_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="@android:color/transparent"
-            android:scaleType="centerCrop" />
+            android:scaleType="fitCenter" />
 
         <LinearLayout
             android:layout_width="match_parent"
