--- a/app/src/main/res/layout/fragment_event_info.xml
+++ b/app/src/main/res/layout/fragment_event_info.xml
@@ -9,22 +9,20 @@
 
     <!-- TODO: Update blank fragment layout -->
     <ImageView
-        android:elevation="20dp"
         android:outlineAmbientShadowColor="@color/grey"
         android:layout_width="match_parent"
         android:scaleType="centerCrop"
         android:layout_height="200dp"
         android:id="@+id/imageView"/>
     <TextView android:layout_width="match_parent" android:layout_height="32dp"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
+        android:autoSizeTextType="uniform"
+        android:autoSizeMinTextSize="12sp"
         android:text="CompanyName"
+        android:textSize="20sp"
+        android:layout_marginTop="2dp"
         android:id="@+id/eventName"
         android:paddingHorizontal="10dp"/>
-    <TextView android:layout_width="match_parent" android:layout_height="19dp"
-        android:id="@+id/introduction"
-        android:text="Brief Intro"
-        android:paddingHorizontal="10dp"
-        />
+
     <TextView android:layout_width="match_parent" android:layout_height="19dp"
         android:id="@+id/location"
         android:paddingHorizontal="10dp"/>
