--- a/app/src/main/res/layout/fragment_event_info_viewholder.xml
+++ b/app/src/main/res/layout/fragment_event_info_viewholder.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/event_info_image"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         android:contentDescription="Image given by company"
         android:baselineAlignBottom="true"/>
     <TextView
