--- a/app/src/main/res/layout/fragment_sponsor_info.xml
+++ b/app/src/main/res/layout/fragment_sponsor_info.xml
@@ -5,7 +5,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".favourites.SponsorInfoFragment">
@@ -43,9 +43,15 @@
     <TextView android:layout_width="match_parent" android:layout_height="24dp"
     android:text="About"
         android:paddingHorizontal="10dp"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="40dp">
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
     android:id="@+id/aboutParagraph"
-        android:paddingHorizontal="10dp"/>
+        android:paddingHorizontal="10dp"
+        />
+    </ScrollView>
 
 </LinearLayout>
 </ScrollView>
