--- a/app/src/main/res/layout/location_view_holder.xml
+++ b/app/src/main/res/layout/location_view_holder.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:gravity="center">
+    android:layout_height="wrap_content">
     <ImageView
         android:layout_marginStart="10dp"
         android:layout_width="60dp"
@@ -11,18 +9,14 @@
         android:padding="5dp"
         android:id="@+id/locationImage"
         />
-   <LinearLayout
-       android:orientation="vertical"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
+
        <TextView
+           android:gravity="center_vertical"
            android:id="@+id/location"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content" />
-       <TextView
-           android:id="@+id/description"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content" />
-   </LinearLayout>
+           android:textSize="20sp"
+           android:layout_width="wrap_content"
+           android:layout_height="match_parent" />
+
+
 
 </LinearLayout>
